--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/web/style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta name="theme-color" content="#3f51b5">
-    <link rel="manifest" href="/web/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
     <link http-equiv="origin-trial"
         content="At3uhlLvIiUq7b2cW267B1XKvHohHGuxeCqF3FJB/0RaR6BUUC5iOWgfYjkaBwzInT33eAdoSEHpONIpM8h4BQAAAABieyJvcmlnaW4iOiJodHRwczovL2dldC1pbnN0YWxsZWQtYXBwcy5nbGl0Y2gubWU6NDQzIiwiZmVhdHVyZSI6Ikluc3RhbGxlZEFwcCIsImV4cGlyeSI6MTU3OTAyOTYxNn0=">
